--- a/01-sandwiches/Makefile
+++ b/01-sandwiches/Makefile
@@ -11,3 +11,8 @@ endif
 
 # call the project makefile!
 include $(OF_ROOT)/libs/openFrameworksCompiled/project/makefileCommon/compile.project.mk
+
+.PHONE: packaged
+packaged: Release
+	cp resources/* ./bin/$(APPNAME).app/Contents/Resources/.
+	ls -l ./bin/$(APPNAME).app/Contents/Resources/.
