shader loads passthrough

--- a/01-sandwiches/Makefile
+++ b/01-sandwiches/Makefile
@@ -18,3 +18,9 @@ Packaged: Release
 
 RunPackaged: Packaged
 	make RunRelease
+
+
+ayyy:
+	rm -fr recorded.mov
+	make RunPackaged
+	open recorded.mov
